# OpenTE

./: .gitignore  CMakeLists.txt
include/opente/core/: CoreTE.hpp
include/opente/entity/: DataType.hpp
include/opente/feature/: FileManager.hpp  QueueStream.hpp
include/opente/model/: MobileNet.hpp  Model.hpp  ModelEngine.hpp  Subtraction.hpp  Yolo.hpp
include/opente/utils/: CmdLineParser.hpp  Timer.hpp
src/: main.cpp
src/core/: CoreTE.cpp
src/features/: FileManager.cpp
src/model/: MobileNet.cpp  Subtraction.cpp
src/model/detector/: Yolo.cpp
src/utils/: CmdLineParser.cpp  Log.cpp  Timer.cpp
